test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_min.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_min.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: option `min` must be an integer literal
